@@ -1,6 +1,7 @@
 Changes in 2.1.5CVS
 
 - Performance improvement in OverlayOp::insertUniqueEdge()
+- CoordinateSequence copy removal in EdgeRing
 - Minor memory allocation improvements 
 
 Changes in 2.1.4
